# Bio-Sentinel

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-models.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
bio_sentinel/: __init__.py  __main__.py  cli.py
bio_sentinel/core/: __init__.py  base_model.py  prediction.py  registry.py
bio_sentinel/datasets/: __init__.py  golden.py
bio_sentinel/distorters/: __init__.py  base.py  fog.py  low_light.py  occlusion.py  rain.py
bio_sentinel/models/: __init__.py  megadetector_v5.py  megadetector_v6.py  megadetector_v6_apache.py  megadetector_v6_mit.py  mock_megadetector.py
bio_sentinel/reporting/: html_reporter.py  json_report.py
data/golden/: .gitkeep
docs/: adding-a-distorter.md  adding-a-model.md  architecture.md
examples/: quick_demo.py
tests/: conftest.py
tests/level1_unit/: test_tensor_shapes.py
tests/level2_regression/: test_golden_dataset.py
tests/level3_robustness/: test_fog.py  test_low_light.py  test_occlusion.py  test_rain.py
tests/level4_edge_cases/: test_placeholder.py
tests/phase2_integration/: test_cli.py  test_comparison.py  test_real_models.py
